Update video source path in index.html

--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@
                 
                 <video autoplay muted loop playsinline preload="metadata"
        class="absolute top-0 left-0 w-full h-full object-cover z-0">
-  <source src="https://raw.githubusercontent.com/codewithPrasiddha/1001267125-ONTARIO-INC./main/assets/bgvideoo.mp4" type="video/mp4">
+  <source src="/assets/bgvideoo.mp4" type="video/mp4">
 </video>
+
 
                 <!-- Fallback for browsers that don't support video -->
                 Your browser does not support the video tag.
