--- a/index.html
+++ b/index.html
@@ -202,15 +202,30 @@
                 preload="metadata"
                 poster="https://images.unsplash.com/photo-1565883501949-98c81973dd2c?w=1600&q=80&auto=format">
                 
-                <video autoplay muted loop playsinline preload="metadata"
-       class="absolute top-0 left-0 w-full h-full object-cover z-0">
-  <source src="/assets/bgvideoo.mp4" type="video/mp4">
-</video>
+<section class="relative min-h-screen flex items-center justify-center overflow-hidden">
+  <video
+    class="absolute inset-0 w-full h-full object-cover z-0 pointer-events-none"
+    muted
+    autoplay
+    loop
+    playsinline
+    webkit-playsinline
+    preload="metadata"
+    poster="/assets/fallback-poster.jpg"
+  >
+    <source src="/assets/bgvideoo.mp4?v=1" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 
+  <!-- Dark overlay -->
+  <div class="absolute inset-0 bg-black/50 z-5"></div>
 
-                <!-- Fallback for browsers that don't support video -->
-                Your browser does not support the video tag.
-            </video>
+  <!-- Your hero content -->
+  <div class="relative z-10">
+    <!-- ... -->
+  </div>
+</section>
+
             
             <!-- Dark overlay for better text readability -->
             <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50 z-5"></div>
