--- a/index.html
+++ b/index.html
@@ -193,18 +193,18 @@
         <!-- Hero Section with Video Background -->
         <section class="relative min-h-screen flex items-center justify-center overflow-hidden" aria-label="Hero section">
             <!-- Video Background -->
-            <video 
-                class="absolute top-0 left-0 w-full h-full object-cover z-0" 
-                autoplay 
-                muted 
-                loop 
-                playsinline
-                preload="metadata"
-                poster="https://images.unsplash.com/photo-1565883501949-98c81973dd2c?w=1600&q=80&auto=format">
-  <source src="/assets/bgvideoo.mp4" type="video/mp4">
-  Your browser does not support the video tag.
+<video
+class="absolute top-0 left-0 w-full h-full object-cover z-0"
+autoplay
+muted
+loop
+playsinline
+preload="metadata"
+poster="https://images.unsplash.com/photo-1565883501949-98c81973dd2c?w=1600&q=80&auto=format">
+<source src="https://salman-sms.vercel.app/assets/bgvideoo.mp4" type="video/mp4">
+<!-- Fallback for browsers that don't support video -->
+Your browser does not support the video tag.
 </video>
-
 
   <!-- Dark overlay -->
   <div class="absolute inset-0 bg-black/50 z-5"></div>
