--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 playsinline
                 preload="metadata"
                 poster="https://images.unsplash.com/photo-1565883501949-98c81973dd2c?w=1600&q=80&auto=format">
-                <source src="https://salman-sms.vercel.app/assets/bgvideoo.mp4" type="video/mp4">
+                <source src="https://www.pexels.com/download/video/5121753/" type="video/mp4">
                 <!-- Fallback for browsers that don't support video -->
                 Your browser does not support the video tag.
             </video>
